# xtask-no-warnings

./: Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md  README.tpl
.github/workflows/: rust.yml
src/: lib.rs
