[package]
name = "xtask-no-warnings"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.1"
description = "Silence warnings in builds without invalidating the dependency cache"
documentation = "https://docs.rs/xtask-no-warnings"
readme = "README.md"
repository = "https://github.com/yozhgoor/xtask-no-warnings"
license = "MIT OR Apache-2.0"
keywords = ["xtask", "cargo", "rustc", "warnings", "build"]
categories = ["development-tools::build-utils"]
